# MovieRecommendationSystem-ISA-

./: .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml  requirements.txt
docs/: MovieLens-1M Deep Dive - Part I _ Towards Data Science.html
docs/MovieLens-1M Deep Dive - Part I _ Towards Data Science_files/: css  frontend-module.js.download  frontend.css  frontend.js.download  gist-embed-04c27bb90e5b.css  gtm.js.download  js  media(1).html  media(2).html  media(3).html  media.html  otSDKStub.js.download  parent-frontend.css  post-template-view-script.js.download  regwall.js.download  saved_resource(1).html  script.js.download  site-header.css  v2.js.download  view-module(1).js.download  view-module(2).js.download  view-module(3).js.download  view-module.js.download  view.js.download
notebooks/: RecommendationSystem.ipynb  analysis.ipynb  history.json  pipeline.ipynb  ranking.ipynb
scripts/: preprocessing.py  recommend.py  train.py
