[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "isa_mini_projekt_1_hkokin"
version = "0.0.1"
description = "1st mini-project at ISA course FIIT STU"
authors = [
  { name = "xkokin" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.9.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["isa_mini_projekt_1_hkokin"]
force_sort_within_sections = true
